[gd_scene load_steps=2 format=3 uid="uid://kh0alv11vgqc"]

[ext_resource type="Script" uid="uid://bmpghvwcjb5c3" path="res://scripts/killzone.gd" id="1_vhv3d"]

[node name="player_killzone" type="Area2D"]
script = ExtResource("1_vhv3d")

[node name="killzone_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="killzone_timer" to="." method="_on_killzone_timer_timeout"]
